# canal-cirlene-niza

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: tests.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
docs/: privacy.html  terms.html  tiktokBwAicZi1RAjMG9gSDsJKUSfN0dC1wPTT.txt  tiktokM1dxjBgyuiKWMEfM3IX7cvOgdPUamMIx.txt  tiktokVzEptUijxGfIJxbatfVbdzeCTrVORKYV.txt
docs/superpowers/plans/: 2026-05-17-cirlene-niza-openclaw-implementation.md
docs/superpowers/specs/: 2026-05-16-cirlene-niza-openclaw-redesign.md
identity/prompts/: avatar_cn_badge.txt  logo_cn_terracota.txt  thumbnail_template.txt
scripts/: baserow_create_tables.py
slides-cientificos/: package-lock.json  package.json
slides-cientificos/src/: Root.tsx
slides-cientificos/src/components/: BenefitsList.tsx  CircleStat.tsx  ComparisonBar.tsx  ScientificDefinition.tsx  StatCard.tsx  StudyQuote.tsx  TimelineProgress.tsx  brand.ts
src/cirleneniza/: __init__.py  config.py
src/cirleneniza/agents/: calendario.py  diretor.py  diretor_arte.py  editor_audio.py  editor_video.py  gerador_cenas.py  gerador_prompts.py  gerador_slides.py  narrador.py  publicador.py  (+2 more)
tests/: __init__.py
tests/test_agents/: test_calendario.py  test_diretor_arte.py  test_editor_audio.py  test_editor_video.py  test_gerador_cenas.py  test_gerador_prompts.py  test_narrador.py  test_natural_router.py  test_publicador.py  test_revisor.py  test_roteirista.py
tests/test_tools/: test_baserow.py  test_cost_tracker.py  test_kokoro.py  test_minio.py  test_nca_toolkit.py
(+19 files in other folders)
